--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
       <div class="mt-8" id="activity-suggestions"></div>
     </main>
     <script src="./app.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2732483748309740"
+     crossorigin="anonymous"></script>
   </body>
 </html>
